@@ -172,105 +172,6 @@ public class SoundFragmentService extends AbstractService<SoundFragment, SoundFr
         return repository.getFileBySlugName(soundFragmentId, slugName, user, false);
     }
 
-    public Uni<List<BrandSoundFragment>> getSongsForBrandPlaylist(String brandName, int quantity, IUser user, SoundFragmentFilterDTO filterDTO) {
-        assert repository != null;
-        assert radioStationService != null;
-
-        SoundFragmentFilter filter = toFilter(filterDTO);
-        String filterStatus = (filter != null && filter.isActivated()) ? "active" : "none";
-
-        BrandActivityLogger.logActivity(brandName, "fragments_request_to_play",
-                "Requesting %d fragments, user: %s, filter: %s",
-                quantity, user.getUserName(), filterStatus);
-
-        return radioStationService.findByBrandName(brandName)
-                .onItem().transformToUni(radioStation -> {
-                    if (radioStation == null) {
-                        BrandActivityLogger.logActivity(brandName, "brand_not_found",
-                                "Brand not found");
-                        return Uni.createFrom().failure(new IllegalArgumentException("Brand not found: " + brandName));
-                    }
-                    UUID brandId = radioStation.getId();
-
-                    // Get more fragments than requested to filter out already played ones
-                    int fetchQuantity = Math.max(quantity * 3, quantity + 50);
-
-                    BrandActivityLogger.logActivity(brandName, "fetching_fragments",
-                            "Fetching up to %d fragments for brand ID: %s with filter", fetchQuantity, brandId);
-
-                    return repository.getBrandSongs(brandId, filter)
-                            .chain(fragments -> {
-                                // CRITICAL SECTION: Synchronize the entire selection process per brand
-                                // This prevents multiple threads from selecting overlapping songs
-                                PlaylistTracker tracker = playlistService.getTracker(brandName);
-
-                                synchronized (tracker) {
-                                    BrandActivityLogger.logActivity(brandName, "fragments_retrieved",
-                                            "Retrieved %d fragments, already played: %d",
-                                            fragments.size(), tracker.getPlayedCount());
-
-                                    // Handle empty results
-                                    if (fragments.isEmpty()) {
-                                        BrandActivityLogger.logActivity(brandName, "no_fragments_available",
-                                                "No fragments available for brand - check database assignments");
-                                        return Uni.createFrom().item(List.<BrandSoundFragment>of());
-                                    }
-
-                                    // Check if tracker needs reset - do this inside sync block
-                                    if (playlistService.shouldResetTracker(brandName, fragments.size())) {
-                                        BrandActivityLogger.logActivity(brandName, "tracker_reset",
-                                                "Resetting tracker - all songs can be played again");
-                                        playlistService.resetTracker(brandName);
-                                        // Refresh tracker reference after reset
-                                        tracker = playlistService.getTracker(brandName);
-                                    }
-
-                                    // Filter out already played songs - atomic with marking
-                                    PlaylistTracker finalTracker = tracker;
-                                    List<BrandSoundFragment> unplayedFragments = fragments.stream()
-                                            .filter(fragment -> !finalTracker.hasPlayed(fragment.getSoundFragment().getId()))
-                                            .collect(Collectors.toList());
-
-                                    BrandActivityLogger.logActivity(brandName, "unplayed_fragments",
-                                            "Found %d unplayed fragments out of %d total",
-                                            unplayedFragments.size(), fragments.size());
-
-                                    // Select fragments based on availability
-                                    List<BrandSoundFragment> selectedFragments = selectFragments(
-                                            unplayedFragments, fragments, quantity, tracker, brandName);
-
-                                    // IMMEDIATELY mark selected songs as played to prevent duplicates
-                                    // This happens atomically with the selection above
-                                    PlaylistTracker finalTracker1 = tracker;
-                                    selectedFragments.forEach(fragment -> {
-                                        UUID fragmentId = fragment.getSoundFragment().getId();
-                                        finalTracker1.markAsPlayed(fragmentId);
-                                        BrandActivityLogger.logActivity(brandName, "song_marked_played",
-                                                "Marked song as played: %s - %s (ID: %s)",
-                                                fragment.getSoundFragment().getArtist(),
-                                                fragment.getSoundFragment().getTitle(),
-                                                fragmentId);
-                                    });
-
-                                    // Shuffle after marking (outside critical path for performance)
-                                    shuffleFragments(selectedFragments, brandName);
-
-                                    BrandActivityLogger.logActivity(brandName, "final_playlist",
-                                            "Returning %d unique fragments, total played count now: %d",
-                                            selectedFragments.size(), tracker.getPlayedCount());
-
-                                    return Uni.createFrom().item(selectedFragments);
-                                } // End synchronized block - other threads can now proceed
-                            });
-                })
-                .onFailure().recoverWithUni(failure -> {
-                    BrandActivityLogger.logActivity(brandName, "fragment_retrieval_error",
-                            "Failed to get fragments: %s", failure.getMessage());
-                    LOGGER.error("Failed to get fragments for brand: {}", brandName, failure);
-                    return Uni.createFrom().failure(failure);
-                });
-    }
-
     private List<BrandSoundFragment> selectFragments(List<BrandSoundFragment> unplayedFragments,
                                                      List<BrandSoundFragment> allFragments,
                                                      int quantity,
@@ -296,7 +197,7 @@ public class SoundFragmentService extends AbstractService<SoundFragment, SoundFr
                 List<BrandSoundFragment> playedFragments = allFragments.stream()
                         .filter(fragment -> tracker.hasPlayed(fragment.getSoundFragment().getId()))
                         .limit(needed)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 selectedFragments.addAll(playedFragments);
 
